# Realworld_dataset_capturer

./: README.md
conf/: setting.conf
data/: model_stl.stl  shader.vs
universal_robot/: README.md
universal_robot/universal_robots/: package.xml
universal_robot/ur5_moveit_config/launch/: move_group.launch
universal_robot/ur_gazebo/launch/: controller_utils.launch
universal_robot/ur_kinematics/src/: ur_moveit_plugin.cpp
ur5_dataset_capturer/: AUTHORS.md  CMakeLists.txt  README.md  package.xml
ur5_dataset_capturer/include/: ObjLoader.h  calc_cam_pose.h  glfunc.h  imageCapturer.h  imageconverter.h  json_utl.h  opengl_math.h  readconfig.h  robot_motion.h  shader.h  usb_cam.h
ur5_dataset_capturer/nodes/: usb_cam_node.cpp
ur5_dataset_capturer/src/: LICENSE  calc_cam_pose.cpp  glfunc.cpp  gltest.cpp  imageCapturer.cpp  imageconverter.cpp  readconfig.cpp  robot_motion.cpp  shader.fs  usb_cam.cpp
ur5_setup/: CMakeLists.txt  README.md  package.xml
ur5_setup/launch/: execute_trajectory.launch  gazebo_plan_rviz.launch  planners.launch  ur5_single_arm_gazebo.launch  ur5_single_arm_rviz.launch
ur5_setup/meshes/: LEGOCbinary.stl  model_dae.dae
ur5_setup/scripts/: execute_trajectory.py
ur5_setup/urdf/: ur5_single_arm.urdf  ur5_single_arm.urdf.xacro
ur5_setup/urdf/objects/: block.urdf  table.urdf
ur5_setup/urdf/sensors/kinect/: kinect.gazebo.xacro  kinect.urdf.xacro
ur5_single_arm_moveit_config/: .setup_assistant  README.md  package.xml
ur5_single_arm_moveit_config/config/: controllers.yaml  ompl_planning.yaml  ur5.srdf
ur5_single_arm_moveit_config/launch/: moveit.rviz  planning_context.launch
