<?xml version="1.0"?>
<package format="2">
  <name>ur5_setup</name>
  <version>0.0.0</version>
  <description>on ur5 mounted sensor settings, world settings, training object settings </description>
  <maintainer email="ningchuanfang@hotmail.com">Chuanfang Ning</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
